--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,55 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap'); */
+
+/* shared style */
+.description {
+  color: #727272;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.btn-primary {
+  border-radius: 8px;
+  background: #ff900e;
+  padding: 1rem 1.5rem;
+  border: none;
+  color: white;
+  margin: 2rem;
+}
 * {
   font-family: "Work Sans", sans-serif;
+}
+/* header style */
+header {
+  background: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-title {
+  color: #131313;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+nav > ul {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  font-weight: 500;
+  font-size: 1rem;
+}
+nav li a {
+  text-decoration: none;
+}
+/* banner style */
+.banner-content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+.banner-title {
+  font-size: 4rem;
+  font-weight: 700;
+  color: rgba(19, 19, 19, 1);
 }
