--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,20 @@
   border: none;
   color: white;
   margin: 2rem;
+  font-size: 1.25rem;
+}
+button,
+a {
+  cursor: pointer;
 }
 * {
+  /* padding: 0; */
+  /* margin: 0; */
+  /* box-sizing: border-box; */
   font-family: "Work Sans", sans-serif;
+}
+img {
+  max-width: 100%;
 }
 /* header style */
 header {
@@ -52,4 +63,28 @@ nav li a {
   font-size: 4rem;
   font-weight: 700;
   color: rgba(19, 19, 19, 1);
+}
+.banner img {
+  margin-top: 1.25rem;
+}
+
+/* responsive style */
+/* for mobile */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  nav > ul {
+    flex-direction: column;
+  }
+}
+/* for tablet */
+@media screen and (min-width:576px) and (max-width: 960px) {
+  header{
+    padding: 50px;
+  }
+  nav{
+    flex-direction: column;
+  }
 }
