created facts section

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,11 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap'); */
 
 /* shared style */
+.section-title {
+  color: #131313;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
 .description {
   color: #727272;
   font-size: 1rem;
@@ -43,11 +48,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.nav-title {
-  color: #131313;
-  font-size: 2.8rem;
-  font-weight: 700;
 }
 nav > ul {
   display: flex;
